// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getExtendedMarkupWithLoadFunction() development mode or non stable storefront release (e.g. /issue/…, /release/…) should return markup and script tag without load() call 1`] = `
<p-button>SomeButton</p-button>
<script>
  porscheDesignSystem.load();

  console.log()
</script>
`;

exports[`getExtendedMarkupWithLoadFunction() development mode or non stable storefront release (e.g. /issue/…, /release/…) should return markup without load() call 1`] = `
<p-button>Some snippet</p-button>

<script>
  porscheDesignSystem.load();
</script>
`;

exports[`getExtendedMarkupWithLoadFunction() stable storefront release (e.g. /v2/…, /v3/…) should return markup and load() call within existing script tag 1`] = `
<p-button>SomeButton</p-button>
<script>
  porscheDesignSystem.load();

  console.log()
</script>
`;

exports[`getExtendedMarkupWithLoadFunction() stable storefront release (e.g. /v2/…, /v3/…) should return markup and load() call within its own script tag 1`] = `
<p-button>Some snippet</p-button>

<script>
  porscheDesignSystem.load();
</script>
`;

exports[`getIndexHtml() development mode or non stable storefront release (e.g. /issue/…, /release/…) should return correct markup when chosen pds version for bug reporting 1`] = `
<!doctype html>
<html dir="ltr" lang="en">

  <head>
    <meta charset="utf-8" />
    <title>Porsche Design System - Vanilla JS</title>
    <script src="node_modules/@porsche-design-system/components-js/index.js"></script>

    <!-- prettier-ignore -->
    <style data-pds-initial-styles>
      html,
      body {
        margin: 0;
        padding: 0;
        font-family: 'Porsche Next', 'Arial Narrow', Arial, 'Heiti SC', SimHei, sans-serif;
        line-height: calc(6px + 2.125ex);
        letter-spacing: normal;
        text-size-adjust: none;
        -webkit-text-size-adjust: none
      }

      h1,
      h2,
      h3,
      h4,
      h5,
      h6 {
        font-weight: 600
      }

      p {
        hyphens: auto;
        font-weight: 400;
        overflow-wrap: break-word
      }

      b,
      strong {
        font-weight: 700
      }

      p-accordion,
      p-banner,
      p-button,
      p-button-group,
      p-button-pure,
      p-button-tile,
      p-carousel,
      p-checkbox-wrapper,
      p-content-wrapper,
      p-crest,
      p-display,
      p-divider,
      p-fieldset,
      p-fieldset-wrapper,
      p-flex,
      p-flex-item,
      p-flyout,
      p-grid,
      p-grid-item,
      p-heading,
      p-headline,
      p-icon,
      p-inline-notification,
      p-link,
      p-link-pure,
      p-link-social,
      p-link-tile,
      p-link-tile-model-signature,
      p-marque,
      p-modal,
      p-model-signature,
      p-multi-select,
      p-multi-select-option,
      p-pagination,
      p-popover,
      p-radio-button-wrapper,
      p-scroller,
      p-segmented-control,
      p-segmented-control-item,
      p-select-wrapper,
      p-spinner,
      p-stepper-horizontal,
      p-stepper-horizontal-item,
      p-switch,
      p-table,
      p-table-body,
      p-table-cell,
      p-table-head,
      p-table-head-cell,
      p-table-head-row,
      p-table-row,
      p-tabs,
      p-tabs-bar,
      p-tabs-item,
      p-tag,
      p-tag-dismissible,
      p-text,
      p-text-field-wrapper,
      p-text-list,
      p-text-list-item,
      p-textarea-wrapper,
      p-toast,
      p-wordmark {
        visibility: hidden
      }

      .hydrated,
      .ssr {
        visibility: inherit
      }

      p-accordion a,
      p-banner a,
      p-carousel a,
      p-checkbox-wrapper a,
      p-display a,
      p-flyout a,
      p-heading a,
      p-headline a,
      p-inline-notification a,
      p-modal a,
      p-multi-select a,
      p-popover a,
      p-radio-button-wrapper a,
      p-select-wrapper a,
      p-switch a,
      p-table a,
      p-tabs a,
      p-text a,
      p-text-field-wrapper a,
      p-text-list a,
      p-textarea-wrapper a {
        color: currentcolor !important;
        margin-left: -2px !important;
        margin-right: -2px !important;
        padding-left: 2px !important;
        border-radius: 4px !important;
        padding-right: 2px !important;
        text-decoration: underline !important
      }

      p-accordion a:focus,
      p-banner a:focus,
      p-carousel a:focus,
      p-checkbox-wrapper a:focus,
      p-display a:focus,
      p-flyout a:focus,
      p-heading a:focus,
      p-headline a:focus,
      p-inline-notification a:focus,
      p-modal a:focus,
      p-multi-select a:focus,
      p-popover a:focus,
      p-radio-button-wrapper a:focus,
      p-select-wrapper a:focus,
      p-switch a:focus,
      p-table a:focus,
      p-tabs a:focus,
      p-text a:focus,
      p-text-field-wrapper a:focus,
      p-text-list a:focus,
      p-textarea-wrapper a:focus {
        outline: 2px solid #1A44EA !important;
        outline-offset: 0 !important
      }

      p-accordion a:focus:not(:focus-visible),
      p-banner a:focus:not(:focus-visible),
      p-carousel a:focus:not(:focus-visible),
      p-checkbox-wrapper a:focus:not(:focus-visible),
      p-display a:focus:not(:focus-visible),
      p-flyout a:focus:not(:focus-visible),
      p-heading a:focus:not(:focus-visible),
      p-headline a:focus:not(:focus-visible),
      p-inline-notification a:focus:not(:focus-visible),
      p-modal a:focus:not(:focus-visible),
      p-multi-select a:focus:not(:focus-visible),
      p-popover a:focus:not(:focus-visible),
      p-radio-button-wrapper a:focus:not(:focus-visible),
      p-select-wrapper a:focus:not(:focus-visible),
      p-switch a:focus:not(:focus-visible),
      p-table a:focus:not(:focus-visible),
      p-tabs a:focus:not(:focus-visible),
      p-text a:focus:not(:focus-visible),
      p-text-field-wrapper a:focus:not(:focus-visible),
      p-text-list a:focus:not(:focus-visible),
      p-textarea-wrapper a:focus:not(:focus-visible) {
        outline-color: transparent !important
      }

      p-text-field-wrapper input::-webkit-outer-spin-button,
      p-text-field-wrapper input::-webkit-inner-spin-button,
      p-text-field-wrapper input::-webkit-search-decoration,
      p-text-field-wrapper input::-webkit-search-cancel-button,
      p-text-field-wrapper input::-webkit-calendar-picker-indicator {
        display: none !important
      }

      p-table img {
        vertical-align: middle !important
      }

      p-button-tile picture img,
      p-link-tile picture img,
      p-link-tile-model-signature picture img {
        width: 100% !important;
        height: 100% !important;
        object-fit: cover !important
      }

      @media(hover:hover) {

        p-accordion a,
        p-banner a,
        p-carousel a,
        p-checkbox-wrapper a,
        p-display a,
        p-flyout a,
        p-heading a,
        p-headline a,
        p-inline-notification a,
        p-modal a,
        p-multi-select a,
        p-popover a,
        p-radio-button-wrapper a,
        p-select-wrapper a,
        p-switch a,
        p-table a,
        p-tabs a,
        p-text a,
        p-text-field-wrapper a,
        p-text-list a,
        p-textarea-wrapper a {
          transition: background var(--p-transition-duration, .24s) ease !important
        }

        p-accordion a:hover,
        p-banner a:hover,
        p-carousel a:hover,
        p-checkbox-wrapper a:hover,
        p-display a:hover,
        p-flyout a:hover,
        p-heading a:hover,
        p-headline a:hover,
        p-inline-notification a:hover,
        p-modal a:hover,
        p-multi-select a:hover,
        p-popover a:hover,
        p-radio-button-wrapper a:hover,
        p-select-wrapper a:hover,
        p-switch a:hover,
        p-table a:hover,
        p-tabs a:hover,
        p-text a:hover,
        p-text-field-wrapper a:hover,
        p-text-list a:hover,
        p-textarea-wrapper a:hover {
          background: rgba(148, 149, 152, .18) !important
        }
      }

      p-tabs-bar~[tabindex="0"][role="tabpanel"] {
        border-radius: 1px !important
      }

      p-tabs-bar~[tabindex="0"][role="tabpanel"]:focus {
        outline: 2px solid #1A44EA !important;
        outline-offset: 2px !important
      }

      p-tabs-bar~[tabindex="0"][role="tabpanel"]:focus:not(:focus-visible) {
        outline-color: transparent !important
      }
    </style>

    <style>
      html,
      body {
        margin: 0;
        padding: 0;
      }

      Some global styles
    </style>
  </head>

  <body>
    Some markup
  </body>

</html>
`;

exports[`getIndexHtml() development mode or non stable storefront release (e.g. /issue/…, /release/…) should return correct markup with externalDependencies 1`] = `
<!doctype html>
<html dir="ltr" lang="en">

  <head>
    <meta charset="utf-8" />
    <title>Porsche Design System - Vanilla JS</title>
    <script src="./@porsche-design-system/components-js/index.js"></script>
    < s c r i p t s r c="
    n
    o
    d
    e
    _
    m
    o
    d
    u
    l
    e
    s
    /
    i
    m
    a
    s
    k
    /
    d
    i
    s
    t
    /
    i
    m
    a
    s
    k
    .
    m
    i
    n
    .
    j
    s
    ">
      < / s c r i p t>

        <!-- prettier-ignore -->
        <style data-pds-initial-styles>
          html,
          body {
            margin: 0;
            padding: 0;
            font-family: 'Porsche Next', 'Arial Narrow', Arial, 'Heiti SC', SimHei, sans-serif;
            line-height: calc(6px + 2.125ex);
            letter-spacing: normal;
            text-size-adjust: none;
            -webkit-text-size-adjust: none
          }

          h1,
          h2,
          h3,
          h4,
          h5,
          h6 {
            font-weight: 600
          }

          p {
            hyphens: auto;
            font-weight: 400;
            overflow-wrap: break-word
          }

          b,
          strong {
            font-weight: 700
          }

          p-accordion,
          p-banner,
          p-button,
          p-button-group,
          p-button-pure,
          p-button-tile,
          p-carousel,
          p-checkbox-wrapper,
          p-content-wrapper,
          p-crest,
          p-display,
          p-divider,
          p-fieldset,
          p-fieldset-wrapper,
          p-flex,
          p-flex-item,
          p-flyout,
          p-grid,
          p-grid-item,
          p-heading,
          p-headline,
          p-icon,
          p-inline-notification,
          p-link,
          p-link-pure,
          p-link-social,
          p-link-tile,
          p-link-tile-model-signature,
          p-marque,
          p-modal,
          p-model-signature,
          p-multi-select,
          p-multi-select-option,
          p-pagination,
          p-popover,
          p-radio-button-wrapper,
          p-scroller,
          p-segmented-control,
          p-segmented-control-item,
          p-select-wrapper,
          p-spinner,
          p-stepper-horizontal,
          p-stepper-horizontal-item,
          p-switch,
          p-table,
          p-table-body,
          p-table-cell,
          p-table-head,
          p-table-head-cell,
          p-table-head-row,
          p-table-row,
          p-tabs,
          p-tabs-bar,
          p-tabs-item,
          p-tag,
          p-tag-dismissible,
          p-text,
          p-text-field-wrapper,
          p-text-list,
          p-text-list-item,
          p-textarea-wrapper,
          p-toast,
          p-wordmark {
            visibility: hidden
          }

          .hydrated,
          .ssr {
            visibility: inherit
          }

          p-accordion a,
          p-banner a,
          p-carousel a,
          p-checkbox-wrapper a,
          p-display a,
          p-flyout a,
          p-heading a,
          p-headline a,
          p-inline-notification a,
          p-modal a,
          p-multi-select a,
          p-popover a,
          p-radio-button-wrapper a,
          p-select-wrapper a,
          p-switch a,
          p-table a,
          p-tabs a,
          p-text a,
          p-text-field-wrapper a,
          p-text-list a,
          p-textarea-wrapper a {
            color: currentcolor !important;
            margin-left: -2px !important;
            margin-right: -2px !important;
            padding-left: 2px !important;
            border-radius: 4px !important;
            padding-right: 2px !important;
            text-decoration: underline !important
          }

          p-accordion a:focus,
          p-banner a:focus,
          p-carousel a:focus,
          p-checkbox-wrapper a:focus,
          p-display a:focus,
          p-flyout a:focus,
          p-heading a:focus,
          p-headline a:focus,
          p-inline-notification a:focus,
          p-modal a:focus,
          p-multi-select a:focus,
          p-popover a:focus,
          p-radio-button-wrapper a:focus,
          p-select-wrapper a:focus,
          p-switch a:focus,
          p-table a:focus,
          p-tabs a:focus,
          p-text a:focus,
          p-text-field-wrapper a:focus,
          p-text-list a:focus,
          p-textarea-wrapper a:focus {
            outline: 2px solid #1A44EA !important;
            outline-offset: 0 !important
          }

          p-accordion a:focus:not(:focus-visible),
          p-banner a:focus:not(:focus-visible),
          p-carousel a:focus:not(:focus-visible),
          p-checkbox-wrapper a:focus:not(:focus-visible),
          p-display a:focus:not(:focus-visible),
          p-flyout a:focus:not(:focus-visible),
          p-heading a:focus:not(:focus-visible),
          p-headline a:focus:not(:focus-visible),
          p-inline-notification a:focus:not(:focus-visible),
          p-modal a:focus:not(:focus-visible),
          p-multi-select a:focus:not(:focus-visible),
          p-popover a:focus:not(:focus-visible),
          p-radio-button-wrapper a:focus:not(:focus-visible),
          p-select-wrapper a:focus:not(:focus-visible),
          p-switch a:focus:not(:focus-visible),
          p-table a:focus:not(:focus-visible),
          p-tabs a:focus:not(:focus-visible),
          p-text a:focus:not(:focus-visible),
          p-text-field-wrapper a:focus:not(:focus-visible),
          p-text-list a:focus:not(:focus-visible),
          p-textarea-wrapper a:focus:not(:focus-visible) {
            outline-color: transparent !important
          }

          p-text-field-wrapper input::-webkit-outer-spin-button,
          p-text-field-wrapper input::-webkit-inner-spin-button,
          p-text-field-wrapper input::-webkit-search-decoration,
          p-text-field-wrapper input::-webkit-search-cancel-button,
          p-text-field-wrapper input::-webkit-calendar-picker-indicator {
            display: none !important
          }

          p-table img {
            vertical-align: middle !important
          }

          p-button-tile picture img,
          p-link-tile picture img,
          p-link-tile-model-signature picture img {
            width: 100% !important;
            height: 100% !important;
            object-fit: cover !important
          }

          @media(hover:hover) {

            p-accordion a,
            p-banner a,
            p-carousel a,
            p-checkbox-wrapper a,
            p-display a,
            p-flyout a,
            p-heading a,
            p-headline a,
            p-inline-notification a,
            p-modal a,
            p-multi-select a,
            p-popover a,
            p-radio-button-wrapper a,
            p-select-wrapper a,
            p-switch a,
            p-table a,
            p-tabs a,
            p-text a,
            p-text-field-wrapper a,
            p-text-list a,
            p-textarea-wrapper a {
              transition: background var(--p-transition-duration, .24s) ease !important
            }

            p-accordion a:hover,
            p-banner a:hover,
            p-carousel a:hover,
            p-checkbox-wrapper a:hover,
            p-display a:hover,
            p-flyout a:hover,
            p-heading a:hover,
            p-headline a:hover,
            p-inline-notification a:hover,
            p-modal a:hover,
            p-multi-select a:hover,
            p-popover a:hover,
            p-radio-button-wrapper a:hover,
            p-select-wrapper a:hover,
            p-switch a:hover,
            p-table a:hover,
            p-tabs a:hover,
            p-text a:hover,
            p-text-field-wrapper a:hover,
            p-text-list a:hover,
            p-textarea-wrapper a:hover {
              background: rgba(148, 149, 152, .18) !important
            }
          }

          p-tabs-bar~[tabindex="0"][role="tabpanel"] {
            border-radius: 1px !important
          }

          p-tabs-bar~[tabindex="0"][role="tabpanel"]:focus {
            outline: 2px solid #1A44EA !important;
            outline-offset: 2px !important
          }

          p-tabs-bar~[tabindex="0"][role="tabpanel"]:focus:not(:focus-visible) {
            outline-color: transparent !important
          }
        </style>

        <style>
          html,
          body {
            margin: 0;
            padding: 0;
          }

          Some global styles
        </style>
  </head>

  <body>
    Some markup
  </body>

</html>
`;

exports[`getIndexHtml() development mode or non stable storefront release (e.g. /issue/…, /release/…) should return correct markup without externalDependencies 1`] = `
<!doctype html>
<html dir="ltr" lang="en">

  <head>
    <meta charset="utf-8" />
    <title>Porsche Design System - Vanilla JS</title>
    <script src="./@porsche-design-system/components-js/index.js"></script>

    <!-- prettier-ignore -->
    <style data-pds-initial-styles>
      html,
      body {
        margin: 0;
        padding: 0;
        font-family: 'Porsche Next', 'Arial Narrow', Arial, 'Heiti SC', SimHei, sans-serif;
        line-height: calc(6px + 2.125ex);
        letter-spacing: normal;
        text-size-adjust: none;
        -webkit-text-size-adjust: none
      }

      h1,
      h2,
      h3,
      h4,
      h5,
      h6 {
        font-weight: 600
      }

      p {
        hyphens: auto;
        font-weight: 400;
        overflow-wrap: break-word
      }

      b,
      strong {
        font-weight: 700
      }

      p-accordion,
      p-banner,
      p-button,
      p-button-group,
      p-button-pure,
      p-button-tile,
      p-carousel,
      p-checkbox-wrapper,
      p-content-wrapper,
      p-crest,
      p-display,
      p-divider,
      p-fieldset,
      p-fieldset-wrapper,
      p-flex,
      p-flex-item,
      p-flyout,
      p-grid,
      p-grid-item,
      p-heading,
      p-headline,
      p-icon,
      p-inline-notification,
      p-link,
      p-link-pure,
      p-link-social,
      p-link-tile,
      p-link-tile-model-signature,
      p-marque,
      p-modal,
      p-model-signature,
      p-multi-select,
      p-multi-select-option,
      p-pagination,
      p-popover,
      p-radio-button-wrapper,
      p-scroller,
      p-segmented-control,
      p-segmented-control-item,
      p-select-wrapper,
      p-spinner,
      p-stepper-horizontal,
      p-stepper-horizontal-item,
      p-switch,
      p-table,
      p-table-body,
      p-table-cell,
      p-table-head,
      p-table-head-cell,
      p-table-head-row,
      p-table-row,
      p-tabs,
      p-tabs-bar,
      p-tabs-item,
      p-tag,
      p-tag-dismissible,
      p-text,
      p-text-field-wrapper,
      p-text-list,
      p-text-list-item,
      p-textarea-wrapper,
      p-toast,
      p-wordmark {
        visibility: hidden
      }

      .hydrated,
      .ssr {
        visibility: inherit
      }

      p-accordion a,
      p-banner a,
      p-carousel a,
      p-checkbox-wrapper a,
      p-display a,
      p-flyout a,
      p-heading a,
      p-headline a,
      p-inline-notification a,
      p-modal a,
      p-multi-select a,
      p-popover a,
      p-radio-button-wrapper a,
      p-select-wrapper a,
      p-switch a,
      p-table a,
      p-tabs a,
      p-text a,
      p-text-field-wrapper a,
      p-text-list a,
      p-textarea-wrapper a {
        color: currentcolor !important;
        margin-left: -2px !important;
        margin-right: -2px !important;
        padding-left: 2px !important;
        border-radius: 4px !important;
        padding-right: 2px !important;
        text-decoration: underline !important
      }

      p-accordion a:focus,
      p-banner a:focus,
      p-carousel a:focus,
      p-checkbox-wrapper a:focus,
      p-display a:focus,
      p-flyout a:focus,
      p-heading a:focus,
      p-headline a:focus,
      p-inline-notification a:focus,
      p-modal a:focus,
      p-multi-select a:focus,
      p-popover a:focus,
      p-radio-button-wrapper a:focus,
      p-select-wrapper a:focus,
      p-switch a:focus,
      p-table a:focus,
      p-tabs a:focus,
      p-text a:focus,
      p-text-field-wrapper a:focus,
      p-text-list a:focus,
      p-textarea-wrapper a:focus {
        outline: 2px solid #1A44EA !important;
        outline-offset: 0 !important
      }

      p-accordion a:focus:not(:focus-visible),
      p-banner a:focus:not(:focus-visible),
      p-carousel a:focus:not(:focus-visible),
      p-checkbox-wrapper a:focus:not(:focus-visible),
      p-display a:focus:not(:focus-visible),
      p-flyout a:focus:not(:focus-visible),
      p-heading a:focus:not(:focus-visible),
      p-headline a:focus:not(:focus-visible),
      p-inline-notification a:focus:not(:focus-visible),
      p-modal a:focus:not(:focus-visible),
      p-multi-select a:focus:not(:focus-visible),
      p-popover a:focus:not(:focus-visible),
      p-radio-button-wrapper a:focus:not(:focus-visible),
      p-select-wrapper a:focus:not(:focus-visible),
      p-switch a:focus:not(:focus-visible),
      p-table a:focus:not(:focus-visible),
      p-tabs a:focus:not(:focus-visible),
      p-text a:focus:not(:focus-visible),
      p-text-field-wrapper a:focus:not(:focus-visible),
      p-text-list a:focus:not(:focus-visible),
      p-textarea-wrapper a:focus:not(:focus-visible) {
        outline-color: transparent !important
      }

      p-text-field-wrapper input::-webkit-outer-spin-button,
      p-text-field-wrapper input::-webkit-inner-spin-button,
      p-text-field-wrapper input::-webkit-search-decoration,
      p-text-field-wrapper input::-webkit-search-cancel-button,
      p-text-field-wrapper input::-webkit-calendar-picker-indicator {
        display: none !important
      }

      p-table img {
        vertical-align: middle !important
      }

      p-button-tile picture img,
      p-link-tile picture img,
      p-link-tile-model-signature picture img {
        width: 100% !important;
        height: 100% !important;
        object-fit: cover !important
      }

      @media(hover:hover) {

        p-accordion a,
        p-banner a,
        p-carousel a,
        p-checkbox-wrapper a,
        p-display a,
        p-flyout a,
        p-heading a,
        p-headline a,
        p-inline-notification a,
        p-modal a,
        p-multi-select a,
        p-popover a,
        p-radio-button-wrapper a,
        p-select-wrapper a,
        p-switch a,
        p-table a,
        p-tabs a,
        p-text a,
        p-text-field-wrapper a,
        p-text-list a,
        p-textarea-wrapper a {
          transition: background var(--p-transition-duration, .24s) ease !important
        }

        p-accordion a:hover,
        p-banner a:hover,
        p-carousel a:hover,
        p-checkbox-wrapper a:hover,
        p-display a:hover,
        p-flyout a:hover,
        p-heading a:hover,
        p-headline a:hover,
        p-inline-notification a:hover,
        p-modal a:hover,
        p-multi-select a:hover,
        p-popover a:hover,
        p-radio-button-wrapper a:hover,
        p-select-wrapper a:hover,
        p-switch a:hover,
        p-table a:hover,
        p-tabs a:hover,
        p-text a:hover,
        p-text-field-wrapper a:hover,
        p-text-list a:hover,
        p-textarea-wrapper a:hover {
          background: rgba(148, 149, 152, .18) !important
        }
      }

      p-tabs-bar~[tabindex="0"][role="tabpanel"] {
        border-radius: 1px !important
      }

      p-tabs-bar~[tabindex="0"][role="tabpanel"]:focus {
        outline: 2px solid #1A44EA !important;
        outline-offset: 2px !important
      }

      p-tabs-bar~[tabindex="0"][role="tabpanel"]:focus:not(:focus-visible) {
        outline-color: transparent !important
      }
    </style>

    <style>
      html,
      body {
        margin: 0;
        padding: 0;
      }

      Some global styles
    </style>
  </head>

  <body>
    Some markup
  </body>

</html>
`;

exports[`getIndexHtml() stable storefront release (e.g. /v2/…, /v3/…) should return correct markup when chosen pds version for bug reporting 1`] = `
<!doctype html>
<html dir="ltr" lang="en">

  <head>
    <meta charset="utf-8" />
    <title>Porsche Design System - Vanilla JS</title>
    <script src="node_modules/@porsche-design-system/components-js/index.js"></script>

    <!-- prettier-ignore -->
    <style data-pds-initial-styles>
      html,
      body {
        margin: 0;
        padding: 0;
        font-family: 'Porsche Next', 'Arial Narrow', Arial, 'Heiti SC', SimHei, sans-serif;
        line-height: calc(6px + 2.125ex);
        letter-spacing: normal;
        text-size-adjust: none;
        -webkit-text-size-adjust: none
      }

      h1,
      h2,
      h3,
      h4,
      h5,
      h6 {
        font-weight: 600
      }

      p {
        hyphens: auto;
        font-weight: 400;
        overflow-wrap: break-word
      }

      b,
      strong {
        font-weight: 700
      }

      p-accordion,
      p-banner,
      p-button,
      p-button-group,
      p-button-pure,
      p-button-tile,
      p-carousel,
      p-checkbox-wrapper,
      p-content-wrapper,
      p-crest,
      p-display,
      p-divider,
      p-fieldset,
      p-fieldset-wrapper,
      p-flex,
      p-flex-item,
      p-flyout,
      p-grid,
      p-grid-item,
      p-heading,
      p-headline,
      p-icon,
      p-inline-notification,
      p-link,
      p-link-pure,
      p-link-social,
      p-link-tile,
      p-link-tile-model-signature,
      p-marque,
      p-modal,
      p-model-signature,
      p-multi-select,
      p-multi-select-option,
      p-pagination,
      p-popover,
      p-radio-button-wrapper,
      p-scroller,
      p-segmented-control,
      p-segmented-control-item,
      p-select-wrapper,
      p-spinner,
      p-stepper-horizontal,
      p-stepper-horizontal-item,
      p-switch,
      p-table,
      p-table-body,
      p-table-cell,
      p-table-head,
      p-table-head-cell,
      p-table-head-row,
      p-table-row,
      p-tabs,
      p-tabs-bar,
      p-tabs-item,
      p-tag,
      p-tag-dismissible,
      p-text,
      p-text-field-wrapper,
      p-text-list,
      p-text-list-item,
      p-textarea-wrapper,
      p-toast,
      p-wordmark {
        visibility: hidden
      }

      .hydrated,
      .ssr {
        visibility: inherit
      }

      p-accordion a,
      p-banner a,
      p-carousel a,
      p-checkbox-wrapper a,
      p-display a,
      p-flyout a,
      p-heading a,
      p-headline a,
      p-inline-notification a,
      p-modal a,
      p-multi-select a,
      p-popover a,
      p-radio-button-wrapper a,
      p-select-wrapper a,
      p-switch a,
      p-table a,
      p-tabs a,
      p-text a,
      p-text-field-wrapper a,
      p-text-list a,
      p-textarea-wrapper a {
        color: currentcolor !important;
        margin-left: -2px !important;
        margin-right: -2px !important;
        padding-left: 2px !important;
        border-radius: 4px !important;
        padding-right: 2px !important;
        text-decoration: underline !important
      }

      p-accordion a:focus,
      p-banner a:focus,
      p-carousel a:focus,
      p-checkbox-wrapper a:focus,
      p-display a:focus,
      p-flyout a:focus,
      p-heading a:focus,
      p-headline a:focus,
      p-inline-notification a:focus,
      p-modal a:focus,
      p-multi-select a:focus,
      p-popover a:focus,
      p-radio-button-wrapper a:focus,
      p-select-wrapper a:focus,
      p-switch a:focus,
      p-table a:focus,
      p-tabs a:focus,
      p-text a:focus,
      p-text-field-wrapper a:focus,
      p-text-list a:focus,
      p-textarea-wrapper a:focus {
        outline: 2px solid #1A44EA !important;
        outline-offset: 0 !important
      }

      p-accordion a:focus:not(:focus-visible),
      p-banner a:focus:not(:focus-visible),
      p-carousel a:focus:not(:focus-visible),
      p-checkbox-wrapper a:focus:not(:focus-visible),
      p-display a:focus:not(:focus-visible),
      p-flyout a:focus:not(:focus-visible),
      p-heading a:focus:not(:focus-visible),
      p-headline a:focus:not(:focus-visible),
      p-inline-notification a:focus:not(:focus-visible),
      p-modal a:focus:not(:focus-visible),
      p-multi-select a:focus:not(:focus-visible),
      p-popover a:focus:not(:focus-visible),
      p-radio-button-wrapper a:focus:not(:focus-visible),
      p-select-wrapper a:focus:not(:focus-visible),
      p-switch a:focus:not(:focus-visible),
      p-table a:focus:not(:focus-visible),
      p-tabs a:focus:not(:focus-visible),
      p-text a:focus:not(:focus-visible),
      p-text-field-wrapper a:focus:not(:focus-visible),
      p-text-list a:focus:not(:focus-visible),
      p-textarea-wrapper a:focus:not(:focus-visible) {
        outline-color: transparent !important
      }

      p-text-field-wrapper input::-webkit-outer-spin-button,
      p-text-field-wrapper input::-webkit-inner-spin-button,
      p-text-field-wrapper input::-webkit-search-decoration,
      p-text-field-wrapper input::-webkit-search-cancel-button,
      p-text-field-wrapper input::-webkit-calendar-picker-indicator {
        display: none !important
      }

      p-table img {
        vertical-align: middle !important
      }

      p-button-tile picture img,
      p-link-tile picture img,
      p-link-tile-model-signature picture img {
        width: 100% !important;
        height: 100% !important;
        object-fit: cover !important
      }

      @media(hover:hover) {

        p-accordion a,
        p-banner a,
        p-carousel a,
        p-checkbox-wrapper a,
        p-display a,
        p-flyout a,
        p-heading a,
        p-headline a,
        p-inline-notification a,
        p-modal a,
        p-multi-select a,
        p-popover a,
        p-radio-button-wrapper a,
        p-select-wrapper a,
        p-switch a,
        p-table a,
        p-tabs a,
        p-text a,
        p-text-field-wrapper a,
        p-text-list a,
        p-textarea-wrapper a {
          transition: background var(--p-transition-duration, .24s) ease !important
        }

        p-accordion a:hover,
        p-banner a:hover,
        p-carousel a:hover,
        p-checkbox-wrapper a:hover,
        p-display a:hover,
        p-flyout a:hover,
        p-heading a:hover,
        p-headline a:hover,
        p-inline-notification a:hover,
        p-modal a:hover,
        p-multi-select a:hover,
        p-popover a:hover,
        p-radio-button-wrapper a:hover,
        p-select-wrapper a:hover,
        p-switch a:hover,
        p-table a:hover,
        p-tabs a:hover,
        p-text a:hover,
        p-text-field-wrapper a:hover,
        p-text-list a:hover,
        p-textarea-wrapper a:hover {
          background: rgba(148, 149, 152, .18) !important
        }
      }

      p-tabs-bar~[tabindex="0"][role="tabpanel"] {
        border-radius: 1px !important
      }

      p-tabs-bar~[tabindex="0"][role="tabpanel"]:focus {
        outline: 2px solid #1A44EA !important;
        outline-offset: 2px !important
      }

      p-tabs-bar~[tabindex="0"][role="tabpanel"]:focus:not(:focus-visible) {
        outline-color: transparent !important
      }
    </style>

    <style>
      html,
      body {
        margin: 0;
        padding: 0;
      }

      Some global styles
    </style>
  </head>

  <body>
    Some markup
  </body>

</html>
`;

exports[`getIndexHtml() stable storefront release (e.g. /v2/…, /v3/…) should return correct markup with externalDependencies 1`] = `
<!doctype html>
<html dir="ltr" lang="en">

  <head>
    <meta charset="utf-8" />
    <title>Porsche Design System - Vanilla JS</title>
    <script src="node_modules/@porsche-design-system/components-js/index.js"></script>
    < s c r i p t s r c="
    n
    o
    d
    e
    _
    m
    o
    d
    u
    l
    e
    s
    /
    i
    m
    a
    s
    k
    /
    d
    i
    s
    t
    /
    i
    m
    a
    s
    k
    .
    m
    i
    n
    .
    j
    s
    ">
      < / s c r i p t>

        <!-- prettier-ignore -->
        <style data-pds-initial-styles>
          html,
          body {
            margin: 0;
            padding: 0;
            font-family: 'Porsche Next', 'Arial Narrow', Arial, 'Heiti SC', SimHei, sans-serif;
            line-height: calc(6px + 2.125ex);
            letter-spacing: normal;
            text-size-adjust: none;
            -webkit-text-size-adjust: none
          }

          h1,
          h2,
          h3,
          h4,
          h5,
          h6 {
            font-weight: 600
          }

          p {
            hyphens: auto;
            font-weight: 400;
            overflow-wrap: break-word
          }

          b,
          strong {
            font-weight: 700
          }

          p-accordion,
          p-banner,
          p-button,
          p-button-group,
          p-button-pure,
          p-button-tile,
          p-carousel,
          p-checkbox-wrapper,
          p-content-wrapper,
          p-crest,
          p-display,
          p-divider,
          p-fieldset,
          p-fieldset-wrapper,
          p-flex,
          p-flex-item,
          p-flyout,
          p-grid,
          p-grid-item,
          p-heading,
          p-headline,
          p-icon,
          p-inline-notification,
          p-link,
          p-link-pure,
          p-link-social,
          p-link-tile,
          p-link-tile-model-signature,
          p-marque,
          p-modal,
          p-model-signature,
          p-multi-select,
          p-multi-select-option,
          p-pagination,
          p-popover,
          p-radio-button-wrapper,
          p-scroller,
          p-segmented-control,
          p-segmented-control-item,
          p-select-wrapper,
          p-spinner,
          p-stepper-horizontal,
          p-stepper-horizontal-item,
          p-switch,
          p-table,
          p-table-body,
          p-table-cell,
          p-table-head,
          p-table-head-cell,
          p-table-head-row,
          p-table-row,
          p-tabs,
          p-tabs-bar,
          p-tabs-item,
          p-tag,
          p-tag-dismissible,
          p-text,
          p-text-field-wrapper,
          p-text-list,
          p-text-list-item,
          p-textarea-wrapper,
          p-toast,
          p-wordmark {
            visibility: hidden
          }

          .hydrated,
          .ssr {
            visibility: inherit
          }

          p-accordion a,
          p-banner a,
          p-carousel a,
          p-checkbox-wrapper a,
          p-display a,
          p-flyout a,
          p-heading a,
          p-headline a,
          p-inline-notification a,
          p-modal a,
          p-multi-select a,
          p-popover a,
          p-radio-button-wrapper a,
          p-select-wrapper a,
          p-switch a,
          p-table a,
          p-tabs a,
          p-text a,
          p-text-field-wrapper a,
          p-text-list a,
          p-textarea-wrapper a {
            color: currentcolor !important;
            margin-left: -2px !important;
            margin-right: -2px !important;
            padding-left: 2px !important;
            border-radius: 4px !important;
            padding-right: 2px !important;
            text-decoration: underline !important
          }

          p-accordion a:focus,
          p-banner a:focus,
          p-carousel a:focus,
          p-checkbox-wrapper a:focus,
          p-display a:focus,
          p-flyout a:focus,
          p-heading a:focus,
          p-headline a:focus,
          p-inline-notification a:focus,
          p-modal a:focus,
          p-multi-select a:focus,
          p-popover a:focus,
          p-radio-button-wrapper a:focus,
          p-select-wrapper a:focus,
          p-switch a:focus,
          p-table a:focus,
          p-tabs a:focus,
          p-text a:focus,
          p-text-field-wrapper a:focus,
          p-text-list a:focus,
          p-textarea-wrapper a:focus {
            outline: 2px solid #1A44EA !important;
            outline-offset: 0 !important
          }

          p-accordion a:focus:not(:focus-visible),
          p-banner a:focus:not(:focus-visible),
          p-carousel a:focus:not(:focus-visible),
          p-checkbox-wrapper a:focus:not(:focus-visible),
          p-display a:focus:not(:focus-visible),
          p-flyout a:focus:not(:focus-visible),
          p-heading a:focus:not(:focus-visible),
          p-headline a:focus:not(:focus-visible),
          p-inline-notification a:focus:not(:focus-visible),
          p-modal a:focus:not(:focus-visible),
          p-multi-select a:focus:not(:focus-visible),
          p-popover a:focus:not(:focus-visible),
          p-radio-button-wrapper a:focus:not(:focus-visible),
          p-select-wrapper a:focus:not(:focus-visible),
          p-switch a:focus:not(:focus-visible),
          p-table a:focus:not(:focus-visible),
          p-tabs a:focus:not(:focus-visible),
          p-text a:focus:not(:focus-visible),
          p-text-field-wrapper a:focus:not(:focus-visible),
          p-text-list a:focus:not(:focus-visible),
          p-textarea-wrapper a:focus:not(:focus-visible) {
            outline-color: transparent !important
          }

          p-text-field-wrapper input::-webkit-outer-spin-button,
          p-text-field-wrapper input::-webkit-inner-spin-button,
          p-text-field-wrapper input::-webkit-search-decoration,
          p-text-field-wrapper input::-webkit-search-cancel-button,
          p-text-field-wrapper input::-webkit-calendar-picker-indicator {
            display: none !important
          }

          p-table img {
            vertical-align: middle !important
          }

          p-button-tile picture img,
          p-link-tile picture img,
          p-link-tile-model-signature picture img {
            width: 100% !important;
            height: 100% !important;
            object-fit: cover !important
          }

          @media(hover:hover) {

            p-accordion a,
            p-banner a,
            p-carousel a,
            p-checkbox-wrapper a,
            p-display a,
            p-flyout a,
            p-heading a,
            p-headline a,
            p-inline-notification a,
            p-modal a,
            p-multi-select a,
            p-popover a,
            p-radio-button-wrapper a,
            p-select-wrapper a,
            p-switch a,
            p-table a,
            p-tabs a,
            p-text a,
            p-text-field-wrapper a,
            p-text-list a,
            p-textarea-wrapper a {
              transition: background var(--p-transition-duration, .24s) ease !important
            }

            p-accordion a:hover,
            p-banner a:hover,
            p-carousel a:hover,
            p-checkbox-wrapper a:hover,
            p-display a:hover,
            p-flyout a:hover,
            p-heading a:hover,
            p-headline a:hover,
            p-inline-notification a:hover,
            p-modal a:hover,
            p-multi-select a:hover,
            p-popover a:hover,
            p-radio-button-wrapper a:hover,
            p-select-wrapper a:hover,
            p-switch a:hover,
            p-table a:hover,
            p-tabs a:hover,
            p-text a:hover,
            p-text-field-wrapper a:hover,
            p-text-list a:hover,
            p-textarea-wrapper a:hover {
              background: rgba(148, 149, 152, .18) !important
            }
          }

          p-tabs-bar~[tabindex="0"][role="tabpanel"] {
            border-radius: 1px !important
          }

          p-tabs-bar~[tabindex="0"][role="tabpanel"]:focus {
            outline: 2px solid #1A44EA !important;
            outline-offset: 2px !important
          }

          p-tabs-bar~[tabindex="0"][role="tabpanel"]:focus:not(:focus-visible) {
            outline-color: transparent !important
          }
        </style>

        <style>
          html,
          body {
            margin: 0;
            padding: 0;
          }

          Some global styles
        </style>
  </head>

  <body>
    Some markup
  </body>

</html>
`;

exports[`getIndexHtml() stable storefront release (e.g. /v2/…, /v3/…) should return correct markup without externalDependencies 1`] = `
<!doctype html>
<html dir="ltr" lang="en">

  <head>
    <meta charset="utf-8" />
    <title>Porsche Design System - Vanilla JS</title>
    <script src="node_modules/@porsche-design-system/components-js/index.js"></script>

    <!-- prettier-ignore -->
    <style data-pds-initial-styles>
      html,
      body {
        margin: 0;
        padding: 0;
        font-family: 'Porsche Next', 'Arial Narrow', Arial, 'Heiti SC', SimHei, sans-serif;
        line-height: calc(6px + 2.125ex);
        letter-spacing: normal;
        text-size-adjust: none;
        -webkit-text-size-adjust: none
      }

      h1,
      h2,
      h3,
      h4,
      h5,
      h6 {
        font-weight: 600
      }

      p {
        hyphens: auto;
        font-weight: 400;
        overflow-wrap: break-word
      }

      b,
      strong {
        font-weight: 700
      }

      p-accordion,
      p-banner,
      p-button,
      p-button-group,
      p-button-pure,
      p-button-tile,
      p-carousel,
      p-checkbox-wrapper,
      p-content-wrapper,
      p-crest,
      p-display,
      p-divider,
      p-fieldset,
      p-fieldset-wrapper,
      p-flex,
      p-flex-item,
      p-flyout,
      p-grid,
      p-grid-item,
      p-heading,
      p-headline,
      p-icon,
      p-inline-notification,
      p-link,
      p-link-pure,
      p-link-social,
      p-link-tile,
      p-link-tile-model-signature,
      p-marque,
      p-modal,
      p-model-signature,
      p-multi-select,
      p-multi-select-option,
      p-pagination,
      p-popover,
      p-radio-button-wrapper,
      p-scroller,
      p-segmented-control,
      p-segmented-control-item,
      p-select-wrapper,
      p-spinner,
      p-stepper-horizontal,
      p-stepper-horizontal-item,
      p-switch,
      p-table,
      p-table-body,
      p-table-cell,
      p-table-head,
      p-table-head-cell,
      p-table-head-row,
      p-table-row,
      p-tabs,
      p-tabs-bar,
      p-tabs-item,
      p-tag,
      p-tag-dismissible,
      p-text,
      p-text-field-wrapper,
      p-text-list,
      p-text-list-item,
      p-textarea-wrapper,
      p-toast,
      p-wordmark {
        visibility: hidden
      }

      .hydrated,
      .ssr {
        visibility: inherit
      }

      p-accordion a,
      p-banner a,
      p-carousel a,
      p-checkbox-wrapper a,
      p-display a,
      p-flyout a,
      p-heading a,
      p-headline a,
      p-inline-notification a,
      p-modal a,
      p-multi-select a,
      p-popover a,
      p-radio-button-wrapper a,
      p-select-wrapper a,
      p-switch a,
      p-table a,
      p-tabs a,
      p-text a,
      p-text-field-wrapper a,
      p-text-list a,
      p-textarea-wrapper a {
        color: currentcolor !important;
        margin-left: -2px !important;
        margin-right: -2px !important;
        padding-left: 2px !important;
        border-radius: 4px !important;
        padding-right: 2px !important;
        text-decoration: underline !important
      }

      p-accordion a:focus,
      p-banner a:focus,
      p-carousel a:focus,
      p-checkbox-wrapper a:focus,
      p-display a:focus,
      p-flyout a:focus,
      p-heading a:focus,
      p-headline a:focus,
      p-inline-notification a:focus,
      p-modal a:focus,
      p-multi-select a:focus,
      p-popover a:focus,
      p-radio-button-wrapper a:focus,
      p-select-wrapper a:focus,
      p-switch a:focus,
      p-table a:focus,
      p-tabs a:focus,
      p-text a:focus,
      p-text-field-wrapper a:focus,
      p-text-list a:focus,
      p-textarea-wrapper a:focus {
        outline: 2px solid #1A44EA !important;
        outline-offset: 0 !important
      }

      p-accordion a:focus:not(:focus-visible),
      p-banner a:focus:not(:focus-visible),
      p-carousel a:focus:not(:focus-visible),
      p-checkbox-wrapper a:focus:not(:focus-visible),
      p-display a:focus:not(:focus-visible),
      p-flyout a:focus:not(:focus-visible),
      p-heading a:focus:not(:focus-visible),
      p-headline a:focus:not(:focus-visible),
      p-inline-notification a:focus:not(:focus-visible),
      p-modal a:focus:not(:focus-visible),
      p-multi-select a:focus:not(:focus-visible),
      p-popover a:focus:not(:focus-visible),
      p-radio-button-wrapper a:focus:not(:focus-visible),
      p-select-wrapper a:focus:not(:focus-visible),
      p-switch a:focus:not(:focus-visible),
      p-table a:focus:not(:focus-visible),
      p-tabs a:focus:not(:focus-visible),
      p-text a:focus:not(:focus-visible),
      p-text-field-wrapper a:focus:not(:focus-visible),
      p-text-list a:focus:not(:focus-visible),
      p-textarea-wrapper a:focus:not(:focus-visible) {
        outline-color: transparent !important
      }

      p-text-field-wrapper input::-webkit-outer-spin-button,
      p-text-field-wrapper input::-webkit-inner-spin-button,
      p-text-field-wrapper input::-webkit-search-decoration,
      p-text-field-wrapper input::-webkit-search-cancel-button,
      p-text-field-wrapper input::-webkit-calendar-picker-indicator {
        display: none !important
      }

      p-table img {
        vertical-align: middle !important
      }

      p-button-tile picture img,
      p-link-tile picture img,
      p-link-tile-model-signature picture img {
        width: 100% !important;
        height: 100% !important;
        object-fit: cover !important
      }

      @media(hover:hover) {

        p-accordion a,
        p-banner a,
        p-carousel a,
        p-checkbox-wrapper a,
        p-display a,
        p-flyout a,
        p-heading a,
        p-headline a,
        p-inline-notification a,
        p-modal a,
        p-multi-select a,
        p-popover a,
        p-radio-button-wrapper a,
        p-select-wrapper a,
        p-switch a,
        p-table a,
        p-tabs a,
        p-text a,
        p-text-field-wrapper a,
        p-text-list a,
        p-textarea-wrapper a {
          transition: background var(--p-transition-duration, .24s) ease !important
        }

        p-accordion a:hover,
        p-banner a:hover,
        p-carousel a:hover,
        p-checkbox-wrapper a:hover,
        p-display a:hover,
        p-flyout a:hover,
        p-heading a:hover,
        p-headline a:hover,
        p-inline-notification a:hover,
        p-modal a:hover,
        p-multi-select a:hover,
        p-popover a:hover,
        p-radio-button-wrapper a:hover,
        p-select-wrapper a:hover,
        p-switch a:hover,
        p-table a:hover,
        p-tabs a:hover,
        p-text a:hover,
        p-text-field-wrapper a:hover,
        p-text-list a:hover,
        p-textarea-wrapper a:hover {
          background: rgba(148, 149, 152, .18) !important
        }
      }

      p-tabs-bar~[tabindex="0"][role="tabpanel"] {
        border-radius: 1px !important
      }

      p-tabs-bar~[tabindex="0"][role="tabpanel"]:focus {
        outline: 2px solid #1A44EA !important;
        outline-offset: 2px !important
      }

      p-tabs-bar~[tabindex="0"][role="tabpanel"]:focus:not(:focus-visible) {
        outline-color: transparent !important
      }
    </style>

    <style>
      html,
      body {
        margin: 0;
        padding: 0;
      }

      Some global styles
    </style>
  </head>

  <body>
    Some markup
  </body>

</html>
`;

exports[`getIndexJs() development mode or non stable storefront release (e.g. /issue/…, /release/…) should return correct no script when pds version is chosen for bug reporting 1`] = `""`;

exports[`getIndexJs() development mode or non stable storefront release (e.g. /issue/…, /release/…) should return correct script 1`] = `
"import * as porscheDesignSystem from './@porsche-design-system/components-js';
window.porscheDesignSystem = porscheDesignSystem;"
`;

exports[`getIndexJs() stable storefront release (e.g. /v2/…, /v3/…) should return correct no script when pds version is chosen for bug reporting 1`] = `""`;

exports[`getIndexJs() stable storefront release (e.g. /v2/…, /v3/…) should return correct no script when pds version is not chosen for bug reporting 1`] = `""`;
